# aptomodo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.toml  main.cpp  plan.md  structure.md
assets/attacks/: default.toml  prova.toml  spadata.toml  straight.toml
assets/current/: project.ldtk
assets/current/tracce/: enemy_explosion.aup3  player_shot.aup3
assets/player/: player-v1.kra  player-v1.kra~  player-v2.kra
assets/shaders/: base.fs  test.fs  voronoi.fs
assets/tiles/: tileset-v0.aseprite
assets/tracks/: tracks.csv
cmake-templates/: custom_imgui_CMakeLists.txt
config/: attributes.toml  config.toml  configuration.toml  enemies.csv  generate_header.cpp  gui.cpp  gui.h
includes/: animationManager.cpp  animationManager.h  astar.cpp  astar.h  attacks.cpp  attacks.h  attributes.cpp  attributes.h  attributesConstants.h  audioManager.cpp  audioManager.h  camera.cpp  camera.h  collisions.cpp  collisions.h  commands.cpp  commands.h  components.cpp  components.h  config.cpp  config.h  configuration.cpp  configuration.h  constants.h  controls.cpp  controls.h  enemyType.cpp  enemyType.h  factories.cpp  factories.h  gui.cpp  gui.h  intGrid.cpp  intGrid.h  items.cpp  items.h  levels.cpp  levels.h  npc.cpp  npc.h  (+13 more)
includes/ai/: astar.cpp  astar.h  behaviorTree.cpp  behaviorTree.h  behaviors.cpp  behaviors.h  loop.cpp  loop.h  strategies.cpp  strategies.h
includes/gui/: aiEditor.cpp  aiEditor.h  animationEditor.cpp  animationEditor.h  attackEditor.cpp  attackEditor.h  bezierEditor.cpp  bezierEditor.h
includes/imgui/: cmake_install.cmake
includes/managers/: animationManager.cpp  animationManager.h  assets.cpp  assets.h  audioManager.cpp  audioManager.h  configManager.cpp  configManager.h  framerateManager.h  game.cpp  game.h  gui.cpp  gui.h  levelManager.cpp  levelManager.h  logging.cpp  logging.h  parameters.cpp  parameters.h  renderingManager.cpp  renderingManager.h
includes/math/: bezier.h  bezierEditor.cpp  bezierEditor.h  decay.cpp  decay.h  helpers.cpp  helpers.h  mathConstants.h  spline.cpp  spline.h
includes/resources/: audioAssets.cpp  audioAssets.h  enemyType.cpp  enemyType.h  weapons.cpp  weapons.h
includes/rlImGui/: imgui_impl_raylib.h
includes/systems/: attacks.cpp  attacks.h  inputs.cpp  inputs.h  physics.cpp  physics.h  space.cpp  space.h  statusUpdate.cpp  statusUpdate.h
old/: controls.cpp  controls.h  gui.cpp  npc.cpp  npc.h
